<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="80dp">

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_style"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:text="@string/low" />

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_style"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:text="@string/middle" />

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_style"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:text="@string/high" />
</LinearLayout>