<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10"
            android:id="@+id/content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="9"
                android:layout_marginTop="120dp">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center|center"
                    android:text="@string/EnglishWord"
                    android:textSize="50sp"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:gravity="center|center"
                    android:text="@string/KoreanWord"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="35sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:id="@+id/button"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@drawable/btn_style_main"
                    android:textColor="@android:color/black"
                    android:text="@string/Level"
                    android:textSize="20sp"
                    tools:ignore="ButtonStyle,NestedWeights" />
                <Button
                    android:id="@+id/button2"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@drawable/btn_style_main"
                    android:textColor="@android:color/black"
                    android:text="@string/Test"
                    android:textSize="20sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
</LinearLayout>